# foundry

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  TODO.md  foundry.1  foundry.c  meson.build  meson.options
contrib/: eggactiongroup.h  ide-fuzzy-mutable-index.c  ide-fuzzy-mutable-index.h  line-reader-private.h  meson.build  ssh-agent-sign.c  ssh-agent-sign.h  xml-reader.c
contrib/eggbitset/: roaring.c
data/: app.devsuite.Foundry.metainfo.xml.in  meson.build  org.gnome.Foundry.metainfo.xml.in
data/settings/: app.devsuite.foundry.build.gschema.xml.in  app.devsuite.foundry.editor.gschema.xml.in  app.devsuite.foundry.forge.gschema.xml.in  app.devsuite.foundry.gschema.xml.in  app.devsuite.foundry.lsp.gschema.xml.in  app.devsuite.foundry.project.gschema.xml  app.devsuite.foundry.project.gschema.xml.in  app.devsuite.foundry.run.gschema.xml.in  app.devsuite.foundry.terminal.gschema.xml.in  app.devsuite.foundry.text.gschema.xml.in  meson.build  org.gnome.foundry.build.gschema.xml.in  org.gnome.foundry.forge.gschema.xml.in  org.gnome.foundry.gschema.xml.in  org.gnome.foundry.lsp.gschema.xml.in  org.gnome.foundry.network.gschema.xml.in  org.gnome.foundry.project.gschema.xml.in  org.gnome.foundry.run.gschema.xml.in  org.gnome.foundry.terminal.gschema.xml.in  org.gnome.foundry.text.gschema.xml.in
lib/: .foundry.gitignore  foundry-action-muxer-private.h  foundry-action-muxer.c  foundry-context-private.h  foundry-context.c  foundry-context.h  foundry-contextual.c  foundry-contextual.h  foundry-dbus-service.h  foundry-future-list-model.c  foundry-future-list-model.h  foundry-gom-private.h  foundry-inhibitor.c  foundry-init-private.h  foundry-init.c  foundry-marshal.defs  foundry-service-private.h  foundry-service.c  foundry-service.h  foundry-types.h  foundry-util-private.h  foundry-util.c  foundry-util.h  foundry.gresource.xml  foundry.h  meson.build
lib/cli/: foundry-cli-builtin-build.c  foundry-cli-builtin-config-list.c  foundry-cli-builtin-config-switch.c  foundry-cli-builtin-dependencies-list.c  foundry-cli-builtin-dependencies-update.c  foundry-cli-builtin-devenv.c  foundry-cli-builtin-device-list.c  foundry-cli-builtin-device-switch.c  foundry-cli-builtin-diagnose.c  foundry-cli-builtin-doc-bundle-install.c  foundry-cli-builtin-doc-bundle-list.c  foundry-cli-builtin-doc-query.c  foundry-cli-builtin-enter.c  foundry-cli-builtin-guess-language.c  foundry-cli-builtin-init.c  foundry-cli-builtin-lsp-list.c  foundry-cli-builtin-lsp-prefer.c  foundry-cli-builtin-lsp-run.c  foundry-cli-builtin-pipeline-command.c  foundry-cli-builtin-pipeline-flags.c  foundry-cli-builtin-pipeline-info.c  foundry-cli-builtin-pipeline-invalidate.c  foundry-cli-builtin-pipeline-which.c  foundry-cli-builtin-private.h  foundry-cli-builtin-run.c  foundry-cli-builtin-sdk-install.c  foundry-cli-builtin-sdk-list.c  foundry-cli-builtin-sdk-shell.c  foundry-cli-builtin-sdk-switch.c  foundry-cli-builtin-sdk-which.c  foundry-cli-builtin-settings-get.c  foundry-cli-builtin-settings-set.c  foundry-cli-builtin-shell.c  foundry-cli-builtin-vcs-ignored.c  foundry-cli-builtin-vcs-list.c  foundry-cli-builtin-vcs-switch.c  foundry-cli-command-tree.c  foundry-cli-command.c  foundry-command-line-private.h  foundry-command-line-remote.c  (+3 more)
lib/code-action/: foundry-code-action-provider.h  foundry-code-action.c
lib/command-line/: foundry-cli-builtin-build.c  foundry-cli-builtin-config-switch.c  foundry-cli-builtin-device-list.c  foundry-cli-builtin-device-switch.c  foundry-cli-builtin-enter.c  foundry-cli-builtin-private.h  foundry-cli-builtin-sdk-list.c  foundry-cli-builtin-sdk-switch.c  foundry-cli-builtin-settings-get.c  foundry-cli-builtin-settings-set.c  foundry-cli-builtin-show.c  foundry-cli-command-tree.c  foundry-cli-command-tree.h  foundry-cli-command.c  foundry-cli-command.h  foundry-command-line-local.c  foundry-command-line.c  foundry-command-line.h  meson.build
lib/commands/: foundry-command-manager.c  foundry-command-manager.h  foundry-command-provider.c  foundry-command.c  foundry-command.h
lib/completion/: foundry-completion-proposal.c  foundry-completion-proposal.h  foundry-completion-provider.c  foundry-completion-provider.h  foundry-completion-request.c  foundry-completion-request.h  meson.build
lib/config/: foundry-config-manager.c  foundry-config-manager.h  foundry-config-provider.c  foundry-config.c  foundry-config.h
lib/dap/: foundry-dap-client.c  foundry-dap-debugger.c  foundry-dap-debugger.h  foundry-dap-event-private.h  foundry-dap-event.c  foundry-dap-event.h  foundry-dap-initialize-request.c  foundry-dap-initialize-request.h  foundry-dap-input-stream-private.h  foundry-dap-output-event.c  foundry-dap-output-event.h  foundry-dap-protocol-message-private.h  foundry-dap-protocol-message.c  foundry-dap-protocol-message.h  foundry-dap-request-private.h  foundry-dap-request.c  foundry-dap-request.h  foundry-dap-response-private.h  foundry-dap-response.c  foundry-dap-response.h  foundry-dap-unknown-response.h  meson.build
lib/debugger/: foundry-debug-manager.c  foundry-debug-manager.h  foundry-debugger-manager.c  foundry-debugger-manager.h  foundry-debugger-private.h  foundry-debugger-provider.c  foundry-debugger-provider.h  foundry-debugger-target.c  (+5 more)
libfoundry-gtk/: foundry-file-dialog-private.h  foundry-git-lanes.c  foundry-git-lanes.h  foundry-gtk-init.c  foundry-gtk-plugin.c  foundry-gtk.gresource.xml  foundry-gtk.h  foundry-shortcut-observer.c  foundry-source-buffer-provider-private.h  foundry-source-buffer.c  foundry-source-completion-provider.c  foundry-source-view.h  meson.build
plugins/: meson.build  plugins.gresource.xml  plugins.gresource.xml.in
testsuite/: meson.build  test-acp-agent.c  test-acp-permission-policy.c  test-acp-project-client.c  test-acp-session-update.c  test-cli-command.c  test-commit-builder.c  test-file.c  test-flatpak-builder-manifest.c  test-forge-listing-auto-load.c  test-future-item.c  test-future-list-model.c  test-json.c  test-ollama.c  test-read-all-bytes.c  test-retained-list-model.c  test-settings.c  test-simple-text-buffer.c  test-tweaks.c  test-util.h
(+1769 files in other folders)
