option('development',
       type: 'boolean',
       value: false,
       description: 'For development build, enables extra debugging routines')
option('safe_path',
       type: 'string',
       value: '',
       description: 'PATH variable to run build commands (default: platform-specific)')
option('docs',
       type: 'boolean', value: false,
       description: 'Build reference manual (requires gi-doc and gobject-introspection)')
option('introspection',
       type: 'feature', value: 'enabled',
       description: 'Generate gir data (requires gobject-introspection)')

option('plugin-flatpak',
       type: 'boolean',
       value: true,
       description: 'Provide integration with flatpak SDKs and manifests')
option('plugin-git',
       type: 'boolean',
       value: true,
       description: 'Provide integration with Git version control system')
option('plugin-jhbuild',
       type: 'boolean',
       value: true,
       description: 'Allows using the jhbuild build tool as a SDK')
option('plugin-meson',
       type: 'boolean',
       value: true,
       description: 'Allows using the meson build system')
option('plugin-podman',
       type: 'boolean',
       value: true,
       description: 'Allows using podman containers as a SDK')
